Fix fat jar